# eshop-backend

./: .gitignore  README.md  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 52110bc7fdca_create_users_table.py  ba9162948734_fix_foreign_key_users_id.py
app/: main.py
app/api/: users.py
app/api/routers/: auth.py  product.py  users.py
app/core/: security.py  settings.py
app/crud/: product.py  user.py
app/db/: __init__.py  session.py
app/domain/models/: product.py  user.py
app/domain/repositories/: product_repository_interface.py
app/domain/use_cases/: create_product.py  delete_product.py  get_all_products.py  get_product.py  update_product.py
app/dto/: product.py
app/infrastructure/database/models/: __init__.py  user.py
app/infrastructure/mappers/: product_mapper.py
app/infrastructure/repositoies/: product_repository.py
app/infrastucture/database/models/: product.py
app/infrastucture/mappers/: product_mapper.py
app/interfaces/routers/: product.py  users.py
app/interfaces/schemas/: product.py
app/models/: product.py  user.py
app/schemas/: product.py  user.py
tests/: conftest.py  test_product.py  test_users.py
